Upgrade PDFBox API to v2.0.0 (#265)